# NewBitEntity-2

./: .gitignore
NewBitEntity2/: CMakeLists.txt  CMakeSettings.json
NewBitEntity2/src/: Component.cpp  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  UpdateOrder.h  World.cpp  World.h  stdafx.h
NewBitEntity2/test/General/: TestComponent.cpp  TestComponent.h  TestSystem.cpp  TestSystem.h  main.cpp
lib/: CMakeLists.txt  build.bat
